Update kroxylicious-runtime/src/main/java/io/kroxylicious/proxy/model/VirtualCluster.java
Co-authored-by: Keith Wall <kwall@redhat.com>
Signed-off-by: alanrobinson-dwp <alan.robinson3@engineering.digital.dwp.gov.uk>